# dotfiles

./: .chezmoiignore  README.md  executable_dot_zshrc
dot_SpaceVim.d/: init.toml
dot_config/: symlink_nvim
dot_config/ags/: app.ts  executable_playback_mixer  executable_spot  meson.build
dot_config/ags/@girs/: camel-1.2.d.ts  dmap-4.0.d.ts  ebackend-1.2.d.ts  ebook-1.2.d.ts  ebookcontacts-1.2.d.ts  ecal-2.0.d.ts  edatabook-1.2.d.ts  edatacal-2.0.d.ts  edataserver-1.2.d.ts  edataserverui-1.2.d.ts  edataserverui4-1.0.d.ts  flatpak-1.0.d.ts  folks-0.7.d.ts  folksdummy-0.7.d.ts  folkseds-0.7.d.ts  garcon-1.0.d.ts  gdata-0.0.d.ts  ges-1.0.d.ts  gi.d.ts  gkbd-3.0.d.ts  gmenu-3.0.d.ts  gnomebluetooth-1.0.d.ts  gom-1.0.d.ts  gstvalidate-1.0.d.ts  gtkfrdp-0.2.d.ts  gtksource-4.d.ts  gtkvnc-2.0.d.ts  gupnpav-1.0.d.ts  gvnc-1.0.d.ts  gvncpulse-1.0.d.ts  harfbuzz-0.0.d.ts  ibus-1.0.d.ts  libxfce4panel-2.0.d.ts  libxfce4ui-2.0.d.ts  libxfce4util-1.0.d.ts  libxfce4windowing-0.0.d.ts  libxfce4windowingui-0.0.d.ts  malcontentui-1.d.ts  mbim-1.0.d.ts  mediaart-2.0.d.ts  (+14 more)
dot_config/ags/widget/: MediaPlayer.scss  MediaPlayer.tsx
dot_config/alacritty/: executable_alacritty.yml
dot_config/awesome/: executable_autostart.sh  executable_picom.conf  executable_rc.lua  executable_rc.lua.orginalbackup
dot_config/btop/: btop.conf
dot_config/eww/: eww.scss  eww.yuck
dot_config/hypr/: hyprland.conf  pyprland.json
dot_config/kitty/: kitty.conf
dot_config/nvim/: init.lua  lazy-lock.json
dot_config/tmux/: tmux.conf
progs/scripts/: executable_nfetchT  executable_sw
(+121 files in other folders)
